Fix alignment and overflow issues

--- a/style.css
+++ b/style.css
@@ -22,8 +22,11 @@ body{
 }
 
 #display{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
     height: 100%;
-    line-height: 100px;
     text-align: right;
     font-size: 64px;
     background-color: #d3f3ff;
